gitops/components/routes/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: kgateway-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "argocd.127.0.0.1.nip.io"
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
