gitops/components/routes/httproute-sonarqube.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarqube-route
  namespace: kgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "sonarqube.127.0.0.1.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sonarqube-sonarqube
          namespace: sonarqube
          port: 9000
          weight: 1
