gitops/components/routes/httproute-vault.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: kgateway-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "vault.127.0.0.1.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: vault
          namespace: vault
          port: 8200
          weight: 1
